--- a/src/main/resources/name.properties
+++ b/src/main/resources/name.properties
@@ -3,8 +3,8 @@
 #
 # Written by Naohide Sano
 #
-# @author	<a href="mailto:sano-n@klab.org">Naohdie Sano</a> (sano)
-# @version	0.00	040315	nsano	initial version
+# @author <a href="mailto:sano-n@klab.org">Naohdie Sano</a> (sano)
+# @version 0.00 040315 nsano initial version
 #
 
 UP=\u2191
@@ -30,4 +30,4 @@ NW=NW
 NE=NE
 SW=SW
 SE=SE
-CLEAR=\uff78\uff98\uff71
+CLEAR=Clear
