--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="Shift_JIS"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- ////////////////////////////////////////////////////////////////////// -->
 <!-- Copyright (c) 2004 by Naomi Sano, All rights reserved.               -->
@@ -7,74 +7,56 @@
 <!--                                                                        -->
 <!-- MovaDevice                                                             -->
 <!--                                                                        -->
-<!-- @author	Naohide Sano                                                -->
-<!-- @version	0.00	040309	nsano	initial version                     -->
+<!-- @author Naohide Sano                                                   -->
+<!-- @version 0.00 040309 nsano initial version                             -->
 <!--                                                                        -->
 <!-- ////////////////////////////////////////////////////////////////////// -->
 
-<project default="compile.all" basedir=".">
+<project default="prepare" basedir="."
 
-  <!-- Properties -->
-  <property file="local.properties" />
+  xmlns:artifact="urn:maven-artifact-ant">
 
-  <!-- クラスパスの定義 -->
-  <path id="project.class.path">
-    <pathelement location="." />
-    <pathelement location="../.." />
-    <pathelement location="src" />
-    <pathelement location="../999/build" />
-    <fileset dir="lib">
+  <path id="maven-ant-tasks.classpath">
+    <fileset dir="${user.home}/lib/java/maven-ant-tasks">
       <include name="*.jar" />
     </fileset>
   </path>
+  <typedef resource="org/apache/maven/artifact/ant/antlib.xml"
+           uri="urn:maven-artifact-ant"
+           classpathref="maven-ant-tasks.classpath" />
 
-  <!-- ターゲットの定義 -->
+  <property environment="env" />
+  <property file="local.properties" />
 
-  <!-- clean -->
-  <target name="clean" description="ビルド環境のクリア">
-    <delete>
-      <fileset dir=".">
-        <include name="**/*.class" />
-      </fileset>
-    </delete>
-  </target>
+  <xmlproperty file="pom.xml" />
 
-  <!-- javac.support -->
-  <target name="compile.support" description="コンパイル support">
-    <ant dir="../999" target="dist" />
-    <javac debug="on" deprecation="on">
-      <classpath refid="project.class.path" />
-      <include name="**/*.java" />
-      <src path="src" />
-    </javac>
-  </target>
+  <!-- Path Definitions -->
+  <path id="project.class.path">
+    <pathelement location="${javac.dest.test}" />
+    <pathelement location="${javac.dest}" />
+    <fileset refid="maven-ant-tasks.dependency.fileset" />
+  </path>
 
-  <!-- javac -->
-  <target name="compile" description="コンパイル">
-    <javac debug="on" deprecation="on">
-      <classpath refid="project.class.path" />
-      <include name="*.java" />
-      <src path="." />
-    </javac>
-  </target>
-
-  <!-- javac.all -->
-  <target name="compile.all" depends="compile.support,compile"
-          description="コンパイル all">
-    <native2ascii encoding="Windows-31J"
-                  src="."
-                  dest="."
-                  includes="**/*.properties.sjis"
-                  ext="" />
+  <!-- prepare -->
+  <target name="prepare" description="Preparing">
+    <artifact:pom file="pom.xml" id="maven.project" />
+    <artifact:dependencies fileSetId="maven-ant-tasks.dependency.fileset">
+      <pom refid="maven.project" />
+    </artifact:dependencies>
+    <artifact:mvn pom="pom.xml">
+      <arg value="clean" />
+      <arg value="package" />
+      <arg value="-Dmaven.test.skip=true"/>
+    </artifact:mvn>
   </target>
 
   <!-- run -->
-  <target name="run" depends="compile.all" description="run t1">
+  <target name="run" depends="prepare" description="run t1">
     <antcall target="t1" />
   </target>
 
   <!-- t1 -->
-  <target name="t1" depends="compile.all" description="test DevicePlug">
+  <target name="t1" depends="prepare" description="test DevicePlug">
     <java classname="t907_1" fork="yes">
       <env key="PATH" path="../999/lib;/usr/local/cygwin/bin" />
       <classpath refid="project.class.path" />
@@ -82,14 +64,14 @@
   </target>
 
   <!-- t2 -->
-  <target name="t2" depends="compile.all" description="test MovaDevice">
+  <target name="t2" depends="prepare" description="test MovaDevice">
     <java classname="MovaDevice" fork="yes">
       <classpath refid="project.class.path" />
     </java>
   </target>
 
   <!-- rec -->
-  <target name="rec" depends="compile.all" description="record by mova">
+  <target name="rec" depends="prepare" description="record by mova">
     <java classname="MovaDeviceUI" fork="yes">
       <classpath refid="project.class.path" />
       <arg value="${device.mova}" />
@@ -97,7 +79,7 @@
   </target>
 
   <!-- play -->
-  <target name="play" depends="compile.all" description="playback test.xml">
+  <target name="play" depends="prepare" description="playback test.xml">
     <java classname="MovaDeviceController" fork="yes">
       <classpath refid="project.class.path" />
       <arg value="${device.move}" />
@@ -106,7 +88,7 @@
   </target>
 
   <!-- rec.foma -->
-  <target name="rec.foma" depends="compile.all" description="record by foma">
+  <target name="rec.foma" depends="prepare" description="record by foma">
     <java classname="FomaDeviceUI" fork="yes">
       <classpath refid="project.class.path" />
       <arg value="${device.foma}" />
