--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-apps-mova</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
 
   <name>vavi-apps-mova</name>
   <organization>
